<resources>
    <string name="app_name">StationPurchaseApp</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="et_user_name">Username</string>
    <string name="et_password">Password</string>
    <string name="info_account">Account Information</string>
    <string name="fuel_history">Fuel History</string>
    <string name="payment_methods">payment methods</string>
    <string name="about">about</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome!</string>
    <string name="error_login">Username/password is wrong, please correct.</string>
    <!--URLs-->
    <string name="sign_in_url" translatable="false">https://aeonretail.gasodata.pt/GSSG-QUAL/SiteService/1/Authentication</string>
</resources>
