<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login_Activity"
    android:background="@color/lightGrey">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="129dp"
                android:background="@drawable/frame_style">

                <EditText

                    android:id="@+id/etUser"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="80dp"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/et_user_name"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/hintColor"
                    android:textSize="20dp"
                    android:background="@drawable/edit_text_style">

                </EditText>

                <EditText

                    android:id="@+id/etPass"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="160dp"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/hintColor"
                    android:textSize="20dp"
                    android:background="@drawable/edit_text_style">

                </EditText>
            </FrameLayout>

            <Button

                android:id="@+id/btnLogin"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/frameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-100dp"
                android:background="@drawable/button_style"
                android:text="@string/btn_sign_in"
                android:textColor="@color/hintColor"
                android:textSize="24sp">

            </Button>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>